[package]
name = "vmav_ssimu2"
version = "0.1.0"
edition = "2021"
publish = false
description = "C FFI wrapper around the ssimulacra2 perceptual metric for VMAVIFICIENT"

[lib]
name = "vmav_ssimu2"
crate-type = ["staticlib"]

[dependencies]
ssimulacra2 = { version = "0.5", features = ["rayon"] }
yuvxyb      = "0.4"
v_frame     = "0.3"
num-traits  = "0.2"

[profile.release]
# LTO is intentionally OFF: this crate is consumed as a staticlib by a
# C project that itself enables LLVM LTO. Emitting bitcode here causes
# LLVM-version-mismatch errors at final link time ("Unsupported stack
# probing method"). Normal object code links cleanly.
lto           = false
codegen-units = 1
opt-level     = 3
panic         = "abort"
strip         = true
